--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4124,3 +4124,10 @@ body.is-mobile.landing .wrapper.style4 {
 body.is-mobile.landing #footer {
   background-color: #1d242a;
 }
+/* custom css*/
+.review-image > img {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  text-align: center;
+}
