--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -64,6 +64,7 @@
     <!-- JS -->
     <script src="./loginandsignupassets/vendor/jquery/jquery.min.js"></script>
     <script src="./loginandsignupassets/js/main.js"></script>
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+</body>
+
 
 </html>
