--- a/public/loginandsignupassets/css/style.css
+++ b/public/loginandsignupassets/css/style.css
@@ -780,8 +780,8 @@ label.valid:after {
     margin-bottom: 10px;
   }
 }
-//hide images on small screens
-@media screen and (max-width: 400px) {
+/*hide images on small screens*/
+@media screen and (max-width: 650px) {
   figure {
     display: none;
   }
