making the phone number a required feature

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -15,7 +15,9 @@
 </head>
 
 <body>
+    <nav style="height: 50px; width:100%; background-color:red; margin:0; padding:0;">
 
+    </nav>
     <div class="main">
 
         <!-- Sign up form -->
