--- a/views/index.hbs
+++ b/views/index.hbs
@@ -272,7 +272,7 @@
                 <div class="container" style="background-color:rgba(43,52,61, 0.9)">
                     <form action="/" method="POST">
                         <label for="Phone number">Phone Number</label>
-                        <input type="text" name="phone" placeholder="Phone Number">
+                        <input type="text" name="phone" placeholder="Phone Number" required>
                         <label for="message">Optional Message</label>
                         <textarea name="message" id="" cols="15" rows="5"></textarea>
                         <br>
