--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -12,10 +12,11 @@
 
     <!-- Main css -->
     <link rel="stylesheet" href="./loginandsignupassets/css/style.css">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; connect-src 'self';font-src 'self'; img-src 'self' data: https:; style-src 'self' ; script-src 'self'">
 </head>
 
 <body>
-    <nav style="height: 50px; width:100%; background-color:red; margin:0; padding:0;">
+    <nav>
 
     </nav>
     <div class="main">
@@ -26,7 +27,7 @@
                 <div class="signup-content">
                     <div class="signup-form">
                         <h2 class="form-title">Sign up</h2>
-                        <form method="POST" class="register-form" id="register-form">
+                        <form method="POST" class="register-form" id="register-form"  autocomplete="off" action="/signup">
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                                 <input type="text" name="name" id="name" placeholder="Your Name" />
@@ -37,11 +38,11 @@
                             </div>
                             <div class="form-group">
                                 <label for="pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="pass" id="pass" placeholder="Password" />
+                                <input type="password" name="password" id="pass" placeholder="Password" />
                             </div>
                             <div class="form-group">
                                 <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-                                <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password" />
+                                <input type="password" name="confirm_password" id="re_pass" placeholder="Repeat your password" />
                             </div>
                             <div class="form-group">
                                 <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
@@ -52,7 +53,24 @@
                                 <input type="submit" name="signup" id="signup" class="form-submit" value="Register" />
                             </div>
                         </form>
+                        {{#if data}}
+                            <p>{{this.data}}</p>
+                        {{/if}}
+                    
                     </div>
+                    {{#if errorsList}}
+                    <div class="errors">
+                      <p>Request Not Sent</p>
+                    <ul>
+                     {{#each errorsList}}
+                       <li>{{this.msg}}</li>
+                     {{/each}}
+                    </ul>
+                   </div>
+                  {{/if}}
+                  {{#if confirmPasswordError}}
+                    <p>{{this.confirmPasswordError}}</p>
+                  {{/if}}
                     <div class="signup-image">
                         <figure><img src="./loginandsignupassets/images/signup-image.jpg" alt="sing up image"></figure>
                         <a href="/login" class="signup-image-link">I am already member</a>
