--- a/views/index.hbs
+++ b/views/index.hbs
@@ -80,7 +80,7 @@
                 <h2>Step into the world of Mobile Wet and Dry cleaning</h2>
                 <p>We clean <strong>Every thing</strong> from <strong>Suits</strong> to <strong>Carpets</strong></p>
                 <p>
-                    We offer unique services to wide spectrum of businesses and customers<br>by providing excellent
+                    We offer unique services to wide spectrum of businesses and customers <br> --- by providing excellent
                     services that meet the specifications of our clients.
                 </p>
                 <ul class="actions special">
