--- a/views/index.hbs
+++ b/views/index.hbs
@@ -56,11 +56,12 @@
 
     <!-- Banner -->
     <section id="banner">
+        <h1 style="color: red;;">HELLO WEB SITE IS STILL UNDER DEVELOPMENT, SORRY FOR ANY ERRORS THAT SHOW UP</h1>
         <div class="inner">
             <h2>CITY MOBILE DRY CLEANERS</h2>
             <h3 style="text-shadow: 2px 7px 5px rgba(0,0,0,0.3), 
-							0px -4px 10px rgba(255,255,255,0.3)">
-                Lets Pick your Dirty Stuff<br />
+							0px -4px 10px rgba(255,255,255,0.3)">A Mobile Wet and Dry cleaner In Town<br />
+                Lets Pick your Dirty Laundry From Where You Are<br />
                 And Drop It Clean ASAP <br><span><em>At a cheaper price</em></span></h3>
             <ul class="actions special">
                 <li><a href="#" class="button primary request-button">Request Now</a></li>
@@ -80,7 +81,7 @@
                 <h2>Step into the world of Mobile Wet and Dry cleaning</h2>
                 <p>We clean <strong>Every thing</strong> from <strong>Suits</strong> to <strong>Carpets</strong></p>
                 <p>
-                    We offer unique services to wide spectrum of businesses and customers <br> by providing excellent
+                    We offer unique services to wide spectrum of businesses and customers<br>by providing excellent
                     services that meet the specifications of our clients.
                 </p>
                 <ul class="actions special">
