--- a/views/index.hbs
+++ b/views/index.hbs
@@ -57,11 +57,11 @@
     <!-- Banner -->
     <section id="banner">
         <div class="inner">
-            <h2>CITY MOBILE DRY CLEANERS</h2>
+            <h2>CITY WET AND DRY CLEANERS</h2>
             <h3 style="text-shadow: 2px 7px 5px rgba(0,0,0,0.3), 
 							0px -4px 10px rgba(255,255,255,0.3)">
                 Lets Pick your Dirty Stuff<br />
-                And Drop It Clean ASAP <br><span><em>At a cheaper price</em></span></h3>
+                And Deliver It Clean ASAP <br><span><em>At a cheaper price</em></span></h3>
             <ul class="actions special">
                 <li><a href="#" class="button primary request-button">Request Now</a></li>
                 <li><a href="tel:0789567701" class="button fit">call now</a></li>
@@ -251,7 +251,7 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <div class="container" style="background-color:rgba(43,52,61, 0.9)">
-                    <form action="/" method="POST">
+                    <form action="/request" method="POST">
                         <label for="Phone number">Phone Number</label>
                         <input type="text" name="phone" placeholder="Phone Number" required>
                         <label for="message">Optional Message</label>
