--- a/views/index.hbs
+++ b/views/index.hbs
@@ -61,7 +61,7 @@
             <h3 style="text-shadow: 2px 7px 5px rgba(0,0,0,0.3), 
 							0px -4px 10px rgba(255,255,255,0.3)">
                 Lets Pick your Dirty Stuff<br />
-                And Deliver It Clean ASAP <br><span><em>At a cheaper price</em></span></h3>
+                And Deliver It Clean ASAP <br></h3>
             <ul class="actions special">
                 <li><a href="#" class="button primary request-button">Request Now</a></li>
                 <li><a href="tel:0789567701" class="button fit">call now</a></li>
