--- a/views/index.hbs
+++ b/views/index.hbs
@@ -250,14 +250,14 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <div class="container" style="background-color:rgba(43,52,61, 0.9)">
-                    <form action="/request" method="POST">
+                <div class="container" style="background-color:rgba(43,52,61, 0.9)" onsubmit="getData()">
+                    <form action="/" method="POST" id="Myform" onsubmit="getData()">
                         <label for="Phone number">Phone Number</label>
-                        <input type="text" name="phone" placeholder="Phone Number" required>
+                        <input type="text" name="phone"  placeholder="Phone Number"  required >
                         <label for="message">Optional Message</label>
                         <textarea name="message" id="" cols="15" rows="5"></textarea>
                         <br>
-                        <button type="submit" class="button button-primary" value="submit">Submit</button>
+                        <button id="save-button" type="submit" class="button button-primary" value="submit">Submit</button>
                     </form>
                 </div>
             </div>
