--- a/views/index.hbs
+++ b/views/index.hbs
@@ -31,7 +31,7 @@
             <!-- show alert message if the request is sent-->
             {{#if data}}
                  <div class="success-message" style="height: 50px; width:100%; background-color:#28a745; text-align:center">
-                    Request successfully
+                    Request Sent
                 </div>
             {{/if}}
             <h1><a href="/">PIC</a></h1>
