displaying errors on the screen

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4231,7 +4231,7 @@ label {
 }
 .errors > ul > li {
   background-color: #ed4933;
-  margin: 5px;
+  margin: 5px 0;
   border-radius: 3px;
   text-align: center;
 }
