--- a/views/index.hbs
+++ b/views/index.hbs
@@ -264,7 +264,7 @@
             <div class="modal-content">
                 <span class="close">&times;</span>
                 <div class="container" style="background-color:rgba(43,52,61, 0.9)" onsubmit="getData()">
-                    <form action="/" method="POST" id="Myform" onsubmit="getData()">
+                    <form action="/request" method="POST" id="Myform" onsubmit="getData()">
                         <label for="Phone number">Phone Number</label>
                         <input type="text" name="phone"  placeholder="Phone Number">
                         <label for="message">Optional Message</label>
