--- a/views/index.hbs
+++ b/views/index.hbs
@@ -266,7 +266,7 @@
                 <div class="container" style="background-color:rgba(43,52,61, 0.9)" onsubmit="getData()">
                     <form action="/request" method="POST" id="Myform" onsubmit="getData()">
                         <label for="Phone number">Phone Number</label>
-                        <input type="text" name="phone"  placeholder="Phone Number">
+                        <input type="text" name="phone"  placeholder="Phone Number" required />
                         <label for="message">Optional Message</label>
                         <textarea name="message" id="" cols="15" rows="5"></textarea>
                         <br>
