--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -26,21 +26,14 @@
                 <div class="signup-content">
                     <div class="signup-form">
                         <h2 class="form-title">Sign up</h2>
-                      
-                  {{#if confirmPasswordError}}
-                    <p>{{this.confirmPasswordError}}</p>
-                  {{/if}}
-{{#if errorsList}}
-            <ul class="errors">
-                {{#each errorsList}}
-                <li>{{this.msg}}</li>
-                {{/each}}
-            </ul>
-        {{/if}}
                         <form method="POST" class="register-form" id="register-form"  autocomplete="off" action="/signup">
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                                 <input type="text" name="name" id="name" placeholder="Your Name" />
+                            </div>
+                            <div class="form-group">
+                                <label for="phone"><i class="zmdi zmdi-phone material-icons-name"></i></label>
+                                <input type="text" name="phone" id="phone" placeholder="Your Phone" required />
                             </div>
                             <div class="form-group">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
