--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4224,16 +4224,13 @@ label {
   }
 }
 /* errors */
-.errors > ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
+
 .errors > ul > li {
   background-color: #ed4933;
   margin: 5px 0;
   border-radius: 3px;
-  text-align: center;
+  text-align: left;
+  color: white;
 }
 .errors > p {
   text-align: center;
